--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: >
 baseurl: "/" # the subpath of your site, e.g. /blog/
 url: "http://cecuesta.github.io" # the base hostname & protocol for your site
 cover: "assets/header_data.jpg"
-#logo: "assets/logo.png"
+logo: "assets/logo.png"
 
 # Build settings
 markdown: kramdown
