--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ description: >
   My personal website based on Jekyll using Centrarium theme
 baseurl: "/" # the subpath of your site, e.g. /blog/
 url: "http://cecuesta.github.io" # the base hostname & protocol for your site
-cover: "assets/header_data.jpg"
+#cover: "assets/header_data.jpg"
+cover: "assets/unsplash-2.jpg"
 logo: "assets/logo.png"
 
 # Build settings
